--- a/_publications/NEE_2024.md
+++ b/_publications/NEE_2024.md
@@ -2,7 +2,7 @@
 title: "Ecological filtering shapes the impacts of agricultural deforestation on biodiversity"
 collection: publications
 category: manuscripts
-permalink: '/publication/Nat Ecol Evol 2024'
+permalink: /publication/NEE_2024
 excerpt: 'This paper investigates how deforestation caused by agricultural expansion impacts bird communities. Also examines the role of ecological filtering in determining birds' response to habitat loss.'
 date: 2024-01-05
 venue: 'Nature Ecology & Evolution'
