--- a/_publications/NEE_2024.md
+++ b/_publications/NEE_2024.md
@@ -1,5 +1,5 @@
 ---
-title: "The biodiversity and ecosystem service contributions and trade-offs of forest restoration approaches"
+title: "Ecological filtering shapes the impacts of agricultural deforestation on biodiversity"
 #collection: publications
 #category: conferences
 permalink: /publication/NEE_2024
