--- a/_publications/NEE_2024.md
+++ b/_publications/NEE_2024.md
@@ -3,7 +3,7 @@ title: "Ecological filtering shapes the impacts of agricultural deforestation on
 #collection: publications
 #category: conferences
 permalink: /publication/NEE_2024
-excerpt: 'This paper assesses the relative performance of plantations and native forests in delivering ecosystem services and carbon storage by synthesizing data from the world’s major forest biomes.'
+excerpt: 'This paper explores the complex interactions between agricultural deforestation and bird biodiversity, focusing on how ecological filtering influences the deforestation tolerance of avian species across vrious regions.'
 date: 2024-01-05
 venue: 'Nature ecology & evolution'
 paperurl: 'http://weiyi-wang1.github.io/files/NEE_2024.pdf'
